@@ -4,17 +4,16 @@ plugins {
     id "java"
     id "application"
     id "org.openjfx.javafxplugin" version "0.0.9"
-    id "org.beryx.runtime" version "1.11.4"
+    id "org.beryx.runtime" version "1.12.1"
 }
 
 group = "io.github.mzmine"
 version = "3.0"
 description = "MZmine"
 
-// JDK 14+ is needed for jpackage, but we maintain Java 11 source/target
-// compatibility to avoid problems with JavaFX Scene Builder
-sourceCompatibility = "11"
-targetCompatibility = "11"
+// JDK 14+ is needed for jpackage
+sourceCompatibility = "14"
+targetCompatibility = "14"
 defaultTasks "jpackage"
 
 // Check the OS
@@ -53,8 +52,8 @@ repositories {
     maven { // For cpdetector
         url = "https://nexus.nuiton.org/nexus/content/groups/releases/"
     }
-    maven { // For jmzTab-m Snapshot
-        url = "https://oss.sonatype.org/content/repositories/snapshots/"
+    maven { // For jimzml
+        url = "https://mvnrepository.com/artifact/com.alanmrace/jimzmlparser"
     }
 }
 
@@ -64,13 +63,14 @@ ext {
     jmztabVersion = "3.0.9"
     swaggerVersion = "1.5.22"
     okhttpVersion = "2.7.5"
-    guavaVersion = "30.0-jre"
+    guavaVersion = "30.1-jre"
     slf4jVersion = "1.7.30"
     poiVersion = "4.1.0"
     batikVersion = "1.11"
     controlsfxVersion = "11.0.3"
-    jmzTabmVersion = "1.0.6-SNAPSHOT"
+    jmzTabmVersion = "1.0.6"
     jnaVersion = "5.6.0"
+    junitversion = "5.7.0"
 
     // UUID for upgrades of this package on Windows. Generated by https://www.uuidgenerator.net 
     win_uuid = "896e9c2d-6db8-4259-a1af-1b5f8112d1e1"
@@ -79,8 +79,8 @@ ext {
 dependencies {
     implementation "com.github.graphstream:gs-core:2.0-alpha"
     implementation "com.github.graphstream:gs-ui-javafx:2.0-alpha"
-    implementation "org.jfree:jfreechart:1.5.1"
-    implementation "org.jfree:org.jfree.chart.fx:2.0"
+    implementation "org.jfree:jfreechart:1.5.3"
+    implementation "org.jfree:org.jfree.chart.fx:2.0.1"
     implementation "org.jfree:org.jfree.fxgraphics2d:2.1"
     implementation "org.jfree:org.jfree.svg:4.1"
     implementation "org.jfree:org.jfree.pdf:2.0"
@@ -159,11 +159,17 @@ dependencies {
     implementation "org.controlsfx:controlsfx:$controlsfxVersion"
     implementation "org.drjekyll:fontchooser:2.4"
     implementation "org.json:json:20190722"
-    implementation "com.panemu:tiwulfx:3.0" // For DetachableTabPane
     implementation "com.github.oshi:oshi-core:4.5.2"
     // because the version that is pulled by SIRIUS crashes
     implementation "de.isas.mztab:jmztabm-io:$jmzTabmVersion"
     implementation 'net.java.dev.jna:jna:$jnaVersion'
+    implementation "com.alanmrace:jimzmlparser:1.0.5"
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitversion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitversion"
 }
 
 /*
@@ -186,7 +192,7 @@ configurations.all {
  * Include JavaFX modules
  */
 javafx {
-    version = "15"
+    version = "15.0.1"
     modules = ["javafx.controls",
                "javafx.swing",
                "javafx.fxml",
@@ -197,6 +203,7 @@ javafx {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.compilerArgs += ['--enable-preview']
 }
 
 tasks.withType(Test) {
@@ -211,7 +218,7 @@ tasks.withType(JavaExec) {
  * Set the basic Java runtime parameters (heap size etc.)
  */
 application {
-    mainClassName = "io.github.mzmine.main.MZmineCore"
+    mainClass.set("io.github.mzmine.main.MZmineCore")
     applicationName = "MZmine"
 }
 
@@ -303,3 +310,16 @@ processResources {
         expand(project.properties)
     }
 }
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
